crates/rpkl-runtime/tests/snapshots/snapshot_tests__map_get_or_null.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
expression: eval_pkl(source)
---
{
  "m": {
    "one": 1,
    "two": 2,
    "three": 3
  },
  "r1": 1,
  "r2": null
}
