crates/rpkl-runtime/tests/snapshots/snapshot_tests__map_is_not_empty.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
expression: eval_pkl(source)
---
{
  "r1": false,
  "r2": true
}
