crates/rpkl-runtime/tests/snapshots/snapshot_tests__map_map_keys.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
expression: eval_pkl(source)
---
{
  "m": {
    "one": 1,
    "two": 2
  },
  "r1": {},
  "r2": {
    "ONE": 1,
    "TWO": 2
  }
}
