crates/rpkl-runtime/tests/snapshots/snapshot_tests__map_map_to_pairs.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
expression: eval_pkl(source)
---
{
  "m": {
    "one": 1,
    "two": 2
  },
  "r1": {
    "one": 3,
    "two": 6
  },
  "r2": {
    "1": "one",
    "2": "two"
  }
}
