crates/rpkl-runtime/tests/snapshots/snapshot_tests__map_methods.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
assertion_line: 1503
expression: eval_pkl(source)
---
{
  "m": {
    "a": 1,
    "b": 2,
    "c": 3
  },
  "has_a": true,
  "has_z": false,
  "get_b": 2,
  "get_z": null,
  "len": 3,
  "empty": false,
  "keys": [
    "a",
    "b",
    "c"
  ],
  "values": [
    1,
    2,
    3
  ]
}
