crates/rpkl-runtime/tests/snapshots/snapshot_tests__map_remove.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
assertion_line: 2345
expression: eval_pkl(source)
---
{
  "m": {
    "a": 1,
    "b": 2,
    "c": 3
  },
  "removed": {
    "a": 1,
    "c": 3
  }
}
