crates/rpkl-runtime/tests/snapshots/snapshot_tests__map_to_dynamic.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
expression: eval_pkl(source)
---
{
  "m": {
    "name": "Pigeon",
    "age": 3
  },
  "r1": {
    "name": "Pigeon",
    "age": 3
  }
}
