crates/rpkl-runtime/tests/snapshots/snapshot_tests__mapping_contains_key.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
expression: eval_pkl(source)
---
{
  "m": {
    "a": 1,
    "b": 2
  },
  "r1": true,
  "r2": false
}
